Update lists at 20250822-0301

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -808,7 +808,6 @@ allow 209.141.41.25;
 allow 209.141.45.141;
 allow 209.141.45.81;
 allow 209.141.46.203;
-allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.55.26;
 allow 209.141.58.254;
@@ -1073,6 +1072,7 @@ allow 2605:e440:3::3ef;
 allow 2607:5300:201:3100::35c5;
 allow 2607:5300:205:200::4894;
 allow 2607:f530:9002::19;
+allow 2607:fa18:3:beef:f001:c0de:feed:ba5e;
 allow 2620:18c:0:192::99;
 allow 2620:18c:0:192::e0:130;
 allow 2620:18c:0:192::e0:131;
@@ -1252,6 +1252,7 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1615,7 +1616,6 @@ allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.114.50.124;
@@ -1643,6 +1643,7 @@ allow 38.135.25.142;
 allow 38.135.25.143;
 allow 38.135.25.144;
 allow 38.135.25.2;
+allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1763,6 +1764,7 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
