--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -232,6 +232,7 @@ deny 2605:e440:3::3ef;
 deny 2607:5300:201:3100::35c5;
 deny 2607:5300:205:200::4894;
 deny 2607:f530:9002::19;
+deny 2607:fa18:3:beef:f001:c0de:feed:ba5e;
 deny 2620:18c:0:192::99;
 deny 2620:18c:0:192::e0:130;
 deny 2620:18c:0:192::e0:131;
@@ -410,6 +411,7 @@ deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
