--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -272,7 +272,6 @@ allow 185.100.87.192;
 allow 185.100.87.250;
 allow 185.100.87.41;
 allow 185.10.16.41;
-allow 185.104.120.10;
 allow 185.104.120.30;
 allow 185.104.120.40;
 allow 185.106.102.102;
@@ -507,6 +506,7 @@ allow 185.40.4.101;
 allow 185.40.4.121;
 allow 185.40.4.127;
 allow 185.40.4.132;
+allow 185.40.4.143;
 allow 185.40.4.149;
 allow 185.40.4.150;
 allow 185.40.4.20;
@@ -1287,7 +1287,6 @@ allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
-allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
@@ -1494,6 +1493,7 @@ allow 2a0e:4005:1002:ffff:185:40:4:100;
 allow 2a0e:4005:1002:ffff:185:40:4:101;
 allow 2a0e:4005:1002:ffff:185:40:4:127;
 allow 2a0e:4005:1002:ffff:185:40:4:132;
+allow 2a0e:4005:1002:ffff:185:40:4:143;
 allow 2a0e:4005:1002:ffff:185:40:4:149;
 allow 2a0e:4005:1002:ffff:185:40:4:22;
 allow 2a0e:4005:1002:ffff:185:40:4:29;
@@ -1605,6 +1605,7 @@ allow 2a12:a800:2:1:45:80:158:167;
 allow 2a12:a800:2:1:45:80:158:23;
 allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:a800:2:1:45:80:158:69;
+allow 2a12:a800:8:1:45:94:31:68;
 allow 2a12:a800:9:1:193:26:115:140;
 allow 2a12:a800:9:1:193:26:115:212;
 allow 2a12:a800:9:1:193:26:115:43;
@@ -1618,7 +1619,6 @@ allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.114.50.124;
@@ -1646,6 +1646,7 @@ allow 38.135.25.142;
 allow 38.135.25.143;
 allow 38.135.25.144;
 allow 38.135.25.2;
+allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1711,6 +1712,7 @@ allow 45.66.35.21;
 allow 45.66.35.22;
 allow 45.66.35.31;
 allow 45.66.35.32;
+allow 45.66.35.33;
 allow 45.66.35.34;
 allow 45.66.35.35;
 allow 45.79.144.222;
@@ -1742,6 +1744,7 @@ allow 45.91.250.107;
 allow 45.9.148.50;
 allow 45.9.156.101;
 allow 45.9.168.192;
+allow 45.94.31.68;
 allow 45.95.169.102;
 allow 45.95.169.104;
 allow 45.95.169.109;
@@ -1817,6 +1820,7 @@ allow 72.235.129.116;
 allow 72.5.43.62;
 allow 74.208.79.7;
 allow 74.82.47.194;
+allow 77.110.101.198;
 allow 77.48.28.193;
 allow 77.48.28.204;
 allow 77.48.28.237;
