--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -272,6 +272,7 @@ set_real_ip_from 185.100.87.192;
 set_real_ip_from 185.100.87.250;
 set_real_ip_from 185.100.87.41;
 set_real_ip_from 185.10.16.41;
+set_real_ip_from 185.104.120.10;
 set_real_ip_from 185.104.120.30;
 set_real_ip_from 185.104.120.40;
 set_real_ip_from 185.106.102.102;
@@ -366,7 +367,6 @@ set_real_ip_from 185.220.101.144;
 set_real_ip_from 185.220.101.145;
 set_real_ip_from 185.220.101.146;
 set_real_ip_from 185.220.101.147;
-set_real_ip_from 185.220.101.148;
 set_real_ip_from 185.220.101.149;
 set_real_ip_from 185.220.101.15;
 set_real_ip_from 185.220.101.150;
@@ -649,7 +649,6 @@ set_real_ip_from 198.46.166.157;
 set_real_ip_from 198.50.212.160;
 set_real_ip_from 198.58.107.53;
 set_real_ip_from 198.96.155.3;
-set_real_ip_from 198.98.48.33;
 set_real_ip_from 198.98.50.199;
 set_real_ip_from 198.98.51.189;
 set_real_ip_from 198.98.51.249;
@@ -1006,7 +1005,6 @@ set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1362::2;
 set_real_ip_from 2605:6400:10:1ab:2605:6400:10:1ab;
 set_real_ip_from 2605:6400:10:253:2085:7b82:89a7:2145;
-set_real_ip_from 2605:6400:10:44f::1;
 set_real_ip_from 2605:6400:10:58f:8768:8283:1a62:bdc6;
 set_real_ip_from 2605:6400:10:75:1585:9b71:1c16:b1a1;
 set_real_ip_from 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
@@ -1212,6 +1210,9 @@ set_real_ip_from 2a02:898:218::2;
 set_real_ip_from 2a02:c204:2195:2012::1;
 set_real_ip_from 2a02:c204:2261:2270::1;
 set_real_ip_from 2a02:c204:2263:5153::1;
+set_real_ip_from 2a02:c207:2277:1002::1;
+set_real_ip_from 2a02:c207:2277:1003::1;
+set_real_ip_from 2a02:c207:2277:1004::1;
 set_real_ip_from 2a02:ec0:209:10::4;
 set_real_ip_from 2a02:ed06::222;
 set_real_ip_from 2a03:4000:13:7c3:dead:beef:ca1f:1337;
@@ -1287,6 +1288,7 @@ set_real_ip_from 2a06:1700:0:50::11;
 set_real_ip_from 2a06:1700:3:19::1;
 set_real_ip_from 2a06:1700:3:34::1;
 set_real_ip_from 2a06:1700:4:14::1;
+set_real_ip_from 2a06:3000::10;
 set_real_ip_from 2a06:3000::30;
 set_real_ip_from 2a06:3000::40;
 set_real_ip_from 2a06:d380:0:103::62;
@@ -1339,7 +1341,6 @@ set_real_ip_from 2a0b:f4c2:1::144;
 set_real_ip_from 2a0b:f4c2:1::145;
 set_real_ip_from 2a0b:f4c2:1::146;
 set_real_ip_from 2a0b:f4c2:1::147;
-set_real_ip_from 2a0b:f4c2:1::148;
 set_real_ip_from 2a0b:f4c2:1::149;
 set_real_ip_from 2a0b:f4c2:1::150;
 set_real_ip_from 2a0b:f4c2:1::151;
@@ -1635,6 +1636,9 @@ set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.46.196.22;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
+set_real_ip_from 37.60.232.250;
+set_real_ip_from 37.60.234.89;
+set_real_ip_from 37.60.239.170;
 set_real_ip_from 37.77.56.238;
 set_real_ip_from 38.135.24.30;
 set_real_ip_from 38.135.24.31;
