--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -163,7 +163,6 @@ set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1362::2;
 set_real_ip_from 2605:6400:10:1ab:2605:6400:10:1ab;
 set_real_ip_from 2605:6400:10:253:2085:7b82:89a7:2145;
-set_real_ip_from 2605:6400:10:44f::1;
 set_real_ip_from 2605:6400:10:58f:8768:8283:1a62:bdc6;
 set_real_ip_from 2605:6400:10:75:1585:9b71:1c16:b1a1;
 set_real_ip_from 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
@@ -368,6 +367,9 @@ set_real_ip_from 2a02:898:218::2;
 set_real_ip_from 2a02:c204:2195:2012::1;
 set_real_ip_from 2a02:c204:2261:2270::1;
 set_real_ip_from 2a02:c204:2263:5153::1;
+set_real_ip_from 2a02:c207:2277:1002::1;
+set_real_ip_from 2a02:c207:2277:1003::1;
+set_real_ip_from 2a02:c207:2277:1004::1;
 set_real_ip_from 2a02:ec0:209:10::4;
 set_real_ip_from 2a02:ed06::222;
 set_real_ip_from 2a03:4000:13:7c3:dead:beef:ca1f:1337;
@@ -443,6 +445,7 @@ set_real_ip_from 2a06:1700:0:50::11;
 set_real_ip_from 2a06:1700:3:19::1;
 set_real_ip_from 2a06:1700:3:34::1;
 set_real_ip_from 2a06:1700:4:14::1;
+set_real_ip_from 2a06:3000::10;
 set_real_ip_from 2a06:3000::30;
 set_real_ip_from 2a06:3000::40;
 set_real_ip_from 2a06:d380:0:103::62;
@@ -495,7 +498,6 @@ set_real_ip_from 2a0b:f4c2:1::144;
 set_real_ip_from 2a0b:f4c2:1::145;
 set_real_ip_from 2a0b:f4c2:1::146;
 set_real_ip_from 2a0b:f4c2:1::147;
-set_real_ip_from 2a0b:f4c2:1::148;
 set_real_ip_from 2a0b:f4c2:1::149;
 set_real_ip_from 2a0b:f4c2:1::150;
 set_real_ip_from 2a0b:f4c2:1::151;
