--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -153,7 +153,6 @@ set_real_ip_from 2602:fc24:18:f38f::1;
 set_real_ip_from 2602:fc24:19:524::1;
 set_real_ip_from 2602:fc24:19:eb06::dead;
 set_real_ip_from 2602:fccf:100:3::14;
-set_real_ip_from 2602:fccf:310:1::c;
 set_real_ip_from 2604:2dc0:202:300::ed3;
 set_real_ip_from 2604:a00:101:4:216:3eff:fe2f:1c84;
 set_real_ip_from 2604:a00:101:4:216:3eff:fe2f:20c3;
@@ -163,6 +162,7 @@ set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1362::2;
 set_real_ip_from 2605:6400:10:1ab:2605:6400:10:1ab;
 set_real_ip_from 2605:6400:10:253:2085:7b82:89a7:2145;
+set_real_ip_from 2605:6400:10:44f::1;
 set_real_ip_from 2605:6400:10:58f:8768:8283:1a62:bdc6;
 set_real_ip_from 2605:6400:10:75:1585:9b71:1c16:b1a1;
 set_real_ip_from 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
@@ -233,6 +233,7 @@ set_real_ip_from 2607:5300:201:3100::35c5;
 set_real_ip_from 2607:5300:205:200::4894;
 set_real_ip_from 2607:f530:9002::19;
 set_real_ip_from 2607:fa18:3:beef:f001:c0de:feed:ba5e;
+set_real_ip_from 2610:150:4001:a120:216:3cff:fe4a:e2a9;
 set_real_ip_from 2620:18c:0:192::99;
 set_real_ip_from 2620:18c:0:192::e0:130;
 set_real_ip_from 2620:18c:0:192::e0:131;
@@ -414,6 +415,7 @@ set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
