Update lists at 20250823-1201

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -972,6 +972,7 @@ allow 2.58.56.65;
 allow 2.58.56.93;
 allow 2600:1700:3a61:6f0:ea9c:25ff:fe8b:7a20;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
+allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
@@ -1193,7 +1194,6 @@ allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
-allow 2a00:b700::21f;
 allow 2a00:c70:1:185:246:84:179:1;
 allow 2a00:fbe4:1ab:ffff::133;
 allow 2a01:270:9847::1;
@@ -1753,7 +1753,6 @@ allow 45.95.169.109;
 allow 45.95.169.110;
 allow 45.95.169.252;
 allow 46.165.243.36;
-allow 46.17.41.68;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 46.250.243.29;
@@ -1817,6 +1816,7 @@ allow 66.78.40.182;
 allow 66.94.111.228;
 allow 67.219.109.141;
 allow 71.19.144.106;
+allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.235.129.116;
 allow 72.5.43.62;
