--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -972,6 +972,7 @@ deny 2.58.56.65;
 deny 2.58.56.93;
 deny 2600:1700:3a61:6f0:ea9c:25ff:fe8b:7a20;
 deny 2600:3c00::f03c:91ff:fe73:f9ba;
+deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:95ff:fe5d:8f00;
 deny 2600:3c03::f03c:95ff:fe5d:562;
 deny 2600:3c04::f03c:95ff:fe41:d42c;
@@ -1193,7 +1194,6 @@ deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:74a0:e000:1003::114;
 deny 2a00:99a0:0:1000::2;
-deny 2a00:b700::21f;
 deny 2a00:c70:1:185:246:84:179:1;
 deny 2a00:fbe4:1ab:ffff::133;
 deny 2a01:270:9847::1;
@@ -1753,7 +1753,6 @@ deny 45.95.169.109;
 deny 45.95.169.110;
 deny 45.95.169.252;
 deny 46.165.243.36;
-deny 46.17.41.68;
 deny 46.232.251.191;
 deny 46.234.47.105;
 deny 46.250.243.29;
@@ -1817,6 +1816,7 @@ deny 66.78.40.182;
 deny 66.94.111.228;
 deny 67.219.109.141;
 deny 71.19.144.106;
+deny 72.14.179.10;
 deny 72.211.49.235;
 deny 72.235.129.116;
 deny 72.5.43.62;
