Update lists at 20250823-1801

--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -220,6 +220,7 @@ set_real_ip_from 173.255.198.243;
 set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
+set_real_ip_from 176.58.89.182;
 set_real_ip_from 176.65.134.4;
 set_real_ip_from 176.65.148.133;
 set_real_ip_from 176.65.148.3;
@@ -471,6 +472,7 @@ set_real_ip_from 185.227.68.78;
 set_real_ip_from 185.231.102.51;
 set_real_ip_from 185.233.100.23;
 set_real_ip_from 185.235.146.29;
+set_real_ip_from 185.238.121.58;
 set_real_ip_from 185.241.208.115;
 set_real_ip_from 185.241.208.185;
 set_real_ip_from 185.241.208.202;
@@ -637,7 +639,7 @@ set_real_ip_from 195.47.238.93;
 set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
 set_real_ip_from 196.196.200.100;
-set_real_ip_from 198.167.206.136;
+set_real_ip_from 198.167.206.208;
 set_real_ip_from 198.251.84.163;
 set_real_ip_from 198.251.84.237;
 set_real_ip_from 198.251.88.18;
@@ -1266,6 +1268,7 @@ set_real_ip_from 2a04:52c0:123:c6c3::1;
 set_real_ip_from 2a04:52c0:126:3ab8::1;
 set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:130:896e::1;
+set_real_ip_from 2a04:9b85:500::58;
 set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
