--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -313,6 +313,9 @@ set_real_ip_from 185.191.239.158;
 set_real_ip_from 185.191.239.49;
 set_real_ip_from 185.193.52.180;
 set_real_ip_from 185.195.71.244;
+set_real_ip_from 185.196.220.250;
+set_real_ip_from 185.196.220.38;
+set_real_ip_from 185.196.220.39;
 set_real_ip_from 185.207.107.130;
 set_real_ip_from 185.207.107.216;
 set_real_ip_from 185.220.100.240;
@@ -970,6 +973,7 @@ set_real_ip_from 45.91.250.107;
 set_real_ip_from 45.9.148.50;
 set_real_ip_from 45.9.156.101;
 set_real_ip_from 45.9.168.192;
+set_real_ip_from 45.94.31.68;
 set_real_ip_from 45.95.169.102;
 set_real_ip_from 45.95.169.104;
 set_real_ip_from 45.95.169.109;
