--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -36,7 +36,6 @@ allow 103.251.167.20;
 allow 103.253.24.18;
 allow 103.28.52.93;
 allow 104.167.241.4;
-allow 104.167.242.116;
 allow 104.167.242.117;
 allow 104.167.242.118;
 allow 104.192.3.74;
@@ -1206,6 +1205,7 @@ allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
+allow 2a01:e5c0:56de::2;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -1260,6 +1260,7 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1606,7 +1607,6 @@ allow 2a12:a800:2:1:45:141:215:97;
 allow 2a12:a800:2:1:45:80:158:167;
 allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:a800:2:1:45:80:158:69;
-allow 2a12:a800:8:1:45:94:31:68;
 allow 2a12:a800:9:1:193:26:115:140;
 allow 2a12:a800:9:1:193:26:115:212;
 allow 2a12:a800:9:1:193:26:115:43;
@@ -1746,7 +1746,6 @@ allow 45.91.250.107;
 allow 45.9.148.50;
 allow 45.9.156.101;
 allow 45.9.168.192;
-allow 45.94.31.68;
 allow 45.95.169.102;
 allow 45.95.169.104;
 allow 45.95.169.109;
@@ -1768,6 +1767,7 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1821,6 +1821,7 @@ allow 72.235.129.116;
 allow 72.5.43.62;
 allow 74.208.79.7;
 allow 74.82.47.194;
+allow 77.110.101.198;
 allow 77.48.28.193;
 allow 77.48.28.204;
 allow 77.48.28.237;
@@ -1934,4 +1935,3 @@ allow 95.168.173.143;
 allow 95.211.174.137;
 allow 95.211.244.28;
 allow 98.128.173.33;
-allow 98.71.178.101;
