--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -59,6 +59,7 @@ allow 104.244.79.50;
 allow 104.244.79.61;
 allow 104.254.90.195;
 allow 104.36.80.7;
+allow 107.173.38.18;
 allow 107.174.146.25;
 allow 107.175.93.157;
 allow 107.189.10.175;
@@ -936,6 +937,7 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
+allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -943,12 +945,13 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
+allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.4;
-allow 23.191.200.5;
+allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -1260,6 +1263,7 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1501,7 +1505,6 @@ allow 2a0e:4005:1002:ffff:185:40:4:38;
 allow 2a0e:4005:1002:ffff:185:40:4:44;
 allow 2a0e:4005:1002:ffff:185:40:4:64;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
-allow 2a0e:6a81:a:1a7::;
 allow 2a0e:97c0:3e3:460:1337:b00b:1337:1;
 allow 2a0e:97c0:3e3:460:1337:b01b:1337:2;
 allow 2a0e:97c0:3e3:460:1337:b02b:1337:3;
@@ -1760,11 +1763,11 @@ allow 5.104.86.6;
 allow 51.15.59.15;
 allow 51.222.142.67;
 allow 51.38.225.46;
-allow 5.180.254.251;
 allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1843,6 +1846,7 @@ allow 82.153.138.241;
 allow 82.153.138.7;
 allow 82.221.128.191;
 allow 82.221.131.5;
+allow 82.221.131.86;
 allow 82.221.139.190;
 allow 82.29.128.145;
 allow 82.42.148.195;
