Update lists at 20250825-1201

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -350,7 +350,6 @@ deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:74a0:e000:1003::114;
 deny 2a00:99a0:0:1000::2;
 deny 2a00:c70:1:185:246:84:179:1;
-deny 2a00:fbe4:1ab:ffff::133;
 deny 2a01:270:9847::1;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
@@ -457,6 +456,7 @@ deny 2a09:61c0::20;
 deny 2a09:61c0::21;
 deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
+deny 2a0a:4cc0:2000:cd4c::12;
 deny 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 deny 2a0a:4cc0:c1:12a1:58f9:e7ff:fe0b:b0f1;
 deny 2a0b:8bc0:2:b6a8::1;
@@ -642,6 +642,7 @@ deny 2a0d:bbc7::f816:3eff:fee9:3e45;
 deny 2a0d:bbc7::f816:3eff:feec:9f18;
 deny 2a0d:bbc7::f816:3eff:fef2:6521;
 deny 2a0d:c2c0:1:4::2;
+deny 2a0e:1d80:13:b6d5::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
 deny 2a0e:4005:1002:ffff:185:40:4:101;
 deny 2a0e:4005:1002:ffff:185:40:4:127;
