--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -148,14 +148,6 @@ set_real_ip_from 139.99.8.57;
 set_real_ip_from 141.98.11.62;
 set_real_ip_from 144.126.133.74;
 set_real_ip_from 146.103.43.17;
-set_real_ip_from 146.19.143.119;
-set_real_ip_from 146.19.143.132;
-set_real_ip_from 146.19.143.16;
-set_real_ip_from 146.19.143.181;
-set_real_ip_from 146.19.143.225;
-set_real_ip_from 146.19.143.54;
-set_real_ip_from 146.19.143.92;
-set_real_ip_from 146.19.254.182;
 set_real_ip_from 146.59.126.232;
 set_real_ip_from 146.59.231.4;
 set_real_ip_from 147.45.116.145;
@@ -166,6 +158,7 @@ set_real_ip_from 149.56.44.47;
 set_real_ip_from 152.32.206.127;
 set_real_ip_from 152.53.106.19;
 set_real_ip_from 152.53.184.161;
+set_real_ip_from 152.53.210.165;
 set_real_ip_from 152.53.53.243;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.26.159.157;
@@ -222,10 +215,6 @@ set_real_ip_from 173.237.206.68;
 set_real_ip_from 173.255.198.243;
 set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.121.81.51;
-set_real_ip_from 176.124.32.101;
-set_real_ip_from 176.124.32.122;
-set_real_ip_from 176.124.32.130;
-set_real_ip_from 176.124.32.171;
 set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.58.89.182;
@@ -242,7 +231,6 @@ set_real_ip_from 176.65.151.192;
 set_real_ip_from 176.65.151.193;
 set_real_ip_from 176.65.151.194;
 set_real_ip_from 176.97.114.202;
-set_real_ip_from 177.149.145.208;
 set_real_ip_from 177.93.140.66;
 set_real_ip_from 178.162.175.5;
 set_real_ip_from 178.17.170.144;
@@ -292,13 +280,6 @@ set_real_ip_from 185.112.144.11;
 set_real_ip_from 185.112.146.167;
 set_real_ip_from 185.113.128.30;
 set_real_ip_from 185.120.16.171;
-set_real_ip_from 185.123.53.164;
-set_real_ip_from 185.123.53.165;
-set_real_ip_from 185.123.53.174;
-set_real_ip_from 185.123.53.184;
-set_real_ip_from 185.123.53.22;
-set_real_ip_from 185.123.53.226;
-set_real_ip_from 185.123.53.42;
 set_real_ip_from 185.126.114.110;
 set_real_ip_from 185.129.61.1;
 set_real_ip_from 185.129.61.10;
@@ -605,11 +586,6 @@ set_real_ip_from 192.42.116.27;
 set_real_ip_from 192.42.116.28;
 set_real_ip_from 193.105.134.150;
 set_real_ip_from 193.105.134.155;
-set_real_ip_from 193.109.120.199;
-set_real_ip_from 193.109.120.230;
-set_real_ip_from 193.109.120.59;
-set_real_ip_from 193.109.120.71;
-set_real_ip_from 193.109.120.8;
 set_real_ip_from 193.189.100.194;
 set_real_ip_from 193.189.100.195;
 set_real_ip_from 193.189.100.196;
@@ -623,8 +599,6 @@ set_real_ip_from 193.189.100.203;
 set_real_ip_from 193.189.100.204;
 set_real_ip_from 193.189.100.205;
 set_real_ip_from 193.189.100.206;
-set_real_ip_from 193.233.201.122;
-set_real_ip_from 193.233.201.93;
 set_real_ip_from 193.237.221.228;
 set_real_ip_from 193.239.232.102;
 set_real_ip_from 193.26.115.140;
@@ -639,11 +613,8 @@ set_real_ip_from 194.15.112.133;
 set_real_ip_from 194.15.113.118;
 set_real_ip_from 194.15.115.212;
 set_real_ip_from 194.15.36.117;
-set_real_ip_from 194.26.141.109;
-set_real_ip_from 194.26.141.110;
-set_real_ip_from 194.26.141.45;
-set_real_ip_from 194.26.141.75;
 set_real_ip_from 194.26.192.77;
+set_real_ip_from 194.53.137.102;
 set_real_ip_from 194.87.55.98;
 set_real_ip_from 195.160.220.104;
 set_real_ip_from 195.170.172.212;
@@ -978,13 +949,13 @@ set_real_ip_from 23.191.200.23;
 set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
-set_real_ip_from 23.191.200.27;
 set_real_ip_from 23.191.200.28;
 set_real_ip_from 23.191.200.29;
 set_real_ip_from 23.191.200.3;
-set_real_ip_from 23.191.200.31;
+set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.4;
 set_real_ip_from 23.191.200.5;
+set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
 set_real_ip_from 23.191.200.9;
@@ -1234,7 +1205,6 @@ set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:74a0:e000:1003::114;
 set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a00:c70:1:185:246:84:179:1;
-set_real_ip_from 2a00:fbe4:1ab:ffff::133;
 set_real_ip_from 2a01:270:9847::1;
 set_real_ip_from 2a01:5e0:36:c311::1;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
@@ -1341,6 +1311,7 @@ set_real_ip_from 2a09:61c0::20;
 set_real_ip_from 2a09:61c0::21;
 set_real_ip_from 2a09:61c0::22;
 set_real_ip_from 2a09:61c0::beef;
+set_real_ip_from 2a0a:4cc0:2000:cd4c::12;
 set_real_ip_from 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 set_real_ip_from 2a0a:4cc0:c1:12a1:58f9:e7ff:fe0b:b0f1;
 set_real_ip_from 2a0b:8bc0:2:b6a8::1;
@@ -1526,6 +1497,7 @@ set_real_ip_from 2a0d:bbc7::f816:3eff:fee9:3e45;
 set_real_ip_from 2a0d:bbc7::f816:3eff:feec:9f18;
 set_real_ip_from 2a0d:bbc7::f816:3eff:fef2:6521;
 set_real_ip_from 2a0d:c2c0:1:4::2;
+set_real_ip_from 2a0e:1d80:13:b6d5::1;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:100;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:101;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:127;
@@ -1692,12 +1664,6 @@ set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.13.52;
 set_real_ip_from 45.129.13.57;
-set_real_ip_from 45.129.199.122;
-set_real_ip_from 45.129.199.159;
-set_real_ip_from 45.129.199.162;
-set_real_ip_from 45.129.199.239;
-set_real_ip_from 45.129.199.70;
-set_real_ip_from 45.129.199.84;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.13.225.69;
 set_real_ip_from 45.13.225.78;
@@ -1865,9 +1831,6 @@ set_real_ip_from 77.48.28.193;
 set_real_ip_from 77.48.28.204;
 set_real_ip_from 77.48.28.237;
 set_real_ip_from 77.48.28.239;
-set_real_ip_from 77.72.85.133;
-set_real_ip_from 77.72.85.168;
-set_real_ip_from 77.72.85.176;
 set_real_ip_from 77.81.247.72;
 set_real_ip_from 78.142.18.219;
 set_real_ip_from 80.125.71.115;
@@ -1893,6 +1856,7 @@ set_real_ip_from 82.29.128.145;
 set_real_ip_from 82.42.148.195;
 set_real_ip_from 83.147.17.190;
 set_real_ip_from 83.217.9.73;
+set_real_ip_from 83.228.94.69;
 set_real_ip_from 83.96.213.63;
 set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
@@ -1940,10 +1904,6 @@ set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.236.91;
 set_real_ip_from 91.219.237.39;
 set_real_ip_from 91.227.114.153;
-set_real_ip_from 91.235.234.143;
-set_real_ip_from 91.235.234.145;
-set_real_ip_from 91.235.234.74;
-set_real_ip_from 91.235.234.92;
 set_real_ip_from 91.92.109.126;
 set_real_ip_from 91.92.109.43;
 set_real_ip_from 92.243.24.163;
