--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -350,7 +350,6 @@ set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:74a0:e000:1003::114;
 set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a00:c70:1:185:246:84:179:1;
-set_real_ip_from 2a00:fbe4:1ab:ffff::133;
 set_real_ip_from 2a01:270:9847::1;
 set_real_ip_from 2a01:5e0:36:c311::1;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
@@ -457,6 +456,7 @@ set_real_ip_from 2a09:61c0::20;
 set_real_ip_from 2a09:61c0::21;
 set_real_ip_from 2a09:61c0::22;
 set_real_ip_from 2a09:61c0::beef;
+set_real_ip_from 2a0a:4cc0:2000:cd4c::12;
 set_real_ip_from 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 set_real_ip_from 2a0a:4cc0:c1:12a1:58f9:e7ff:fe0b:b0f1;
 set_real_ip_from 2a0b:8bc0:2:b6a8::1;
@@ -642,6 +642,7 @@ set_real_ip_from 2a0d:bbc7::f816:3eff:fee9:3e45;
 set_real_ip_from 2a0d:bbc7::f816:3eff:feec:9f18;
 set_real_ip_from 2a0d:bbc7::f816:3eff:fef2:6521;
 set_real_ip_from 2a0d:c2c0:1:4::2;
+set_real_ip_from 2a0e:1d80:13:b6d5::1;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:100;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:101;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:127;
