Update lists at 20250826-1501

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -150,7 +150,6 @@ allow 144.126.133.74;
 allow 146.103.43.17;
 allow 146.59.126.232;
 allow 146.59.231.4;
-allow 147.45.116.145;
 allow 149.102.153.38;
 allow 149.202.79.101;
 allow 149.202.79.129;
@@ -470,6 +469,7 @@ allow 185.227.68.78;
 allow 185.231.102.51;
 allow 185.233.100.23;
 allow 185.235.146.29;
+allow 185.238.121.58;
 allow 185.241.208.115;
 allow 185.241.208.202;
 allow 185.241.208.204;
@@ -948,12 +948,14 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
+allow 23.191.200.27;
 allow 23.191.200.28;
+allow 23.191.200.29;
+allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
-allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -1265,7 +1267,6 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1276,6 +1277,7 @@ allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
+allow 2a04:9b85:500::58;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
@@ -1768,7 +1770,6 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
