--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -1,5 +1,4 @@
 deny 2001:0:d911:c0d9:1cd3:68d9:a41c:8d66;
-deny 2001:1af8:4700:a114:6::1;
 deny 2001:1b60:2:1:3935:104:0:1;
 deny 2001:1b60:3:221:3132:102:0:1;
 deny 2001:1b60:3:221:4134:101:0:1;
@@ -228,7 +227,6 @@ deny 2605:a140:2262:7686::1;
 deny 2605:a141:2261:4410::1;
 deny 2605:a142:2263:1906::1;
 deny 2605:aa80:0:9::3;
-deny 2605:e440:15::2e;
 deny 2605:e440:3::3ef;
 deny 2607:5300:201:3100::35c5;
 deny 2607:5300:205:200::4894;
@@ -424,7 +422,6 @@ deny 2a04:52c0:123:c6c3::1;
 deny 2a04:52c0:126:3ab8::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
-deny 2a04:9b85:500::58;
 deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
@@ -627,6 +624,7 @@ deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:6a41:c13:1337::107;
 deny 2a0c:9a40:8860:51::aa11;
+deny 2a0c:9f00:2:12fa::1;
 deny 2a0c:e300:b:b::b;
 deny 2a0d:bbc7::f816:3eff:fe0b:181b;
 deny 2a0d:bbc7::f816:3eff:fe0b:58d3;
@@ -700,7 +698,6 @@ deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:12:a236:9fff:fe9e:36ea;
-deny 2a11:6100:0:1467::;
 deny 2a12:a800:11:1:124:198:131:108;
 deny 2a12:a800:11:1:124:198:131:223;
 deny 2a12:a800:11:1:124:198:131:253;
