--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -351,6 +351,7 @@ allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
 allow 2a01:270:9847::1;
+allow 2a01:4f8:c0c:564::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
@@ -763,5 +764,6 @@ allow 2a12:a800:9:1:193:26:115:82;
 allow 2a12:a800:9:1:45:83:31:79;
 allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
+allow 2a14:1ec7:1000:a633::1;
 allow 2c0f:6c0:0:2::6983;
 allow 2c0f:6c0:0:d::d28b;
