Update lists at 20250827-0301

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -331,6 +331,7 @@ allow 2620:18c:0:192::e0:224;
 allow 2620:18c:0:192::e0:225;
 allow 2620:7:6001::120;
 allow 2620:95:4007::111;
+allow 2800:ba0:6:c1::4858;
 allow 2803:6d90:111::67;
 allow 2803:cd80:2000:10::db8f:5f60;
 allow 2a00:16b0:1:243::7012:3117;
@@ -356,6 +357,7 @@ allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
+allow 2a01:e5c0:7d13::2;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -411,6 +413,7 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
