--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -525,6 +525,7 @@ allow 188.68.36.28;
 allow 188.68.41.191;
 allow 188.68.49.235;
 allow 188.68.52.231;
+allow 190.103.179.98;
 allow 190.120.229.98;
 allow 190.211.254.97;
 allow 192.108.48.150;
@@ -949,10 +950,9 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
-allow 23.191.200.30;
+allow 23.191.200.3;
 allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
@@ -1186,6 +1186,7 @@ allow 2620:18c:0:192::e0:225;
 allow 2620:7:6001::120;
 allow 2620:95:4007::111;
 allow 27.255.75.198;
+allow 2800:ba0:6:c1::4858;
 allow 2803:6d90:111::67;
 allow 2803:cd80:2000:10::db8f:5f60;
 allow 2a00:16b0:1:243::7012:3117;
@@ -1211,6 +1212,7 @@ allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
+allow 2a01:e5c0:7d13::2;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -1266,6 +1268,7 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1637,7 +1640,6 @@ allow 37.228.129.128;
 allow 37.228.129.189;
 allow 37.228.129.5;
 allow 37.228.129.63;
-allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.60.232.250;
 allow 37.60.234.89;
@@ -1768,6 +1770,7 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1804,6 +1807,7 @@ allow 5.8.18.30;
 allow 62.133.45.2;
 allow 62.171.137.169;
 allow 62.182.84.146;
+allow 62.60.250.5;
 allow 62.72.47.105;
 allow 64.190.113.221;
 allow 64.190.76.2;
