--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -525,6 +525,7 @@ set_real_ip_from 188.68.36.28;
 set_real_ip_from 188.68.41.191;
 set_real_ip_from 188.68.49.235;
 set_real_ip_from 188.68.52.231;
+set_real_ip_from 190.103.179.98;
 set_real_ip_from 190.120.229.98;
 set_real_ip_from 190.211.254.97;
 set_real_ip_from 192.108.48.150;
@@ -949,10 +950,9 @@ set_real_ip_from 23.191.200.23;
 set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
-set_real_ip_from 23.191.200.27;
 set_real_ip_from 23.191.200.28;
 set_real_ip_from 23.191.200.29;
-set_real_ip_from 23.191.200.30;
+set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.4;
 set_real_ip_from 23.191.200.5;
@@ -1186,6 +1186,7 @@ set_real_ip_from 2620:18c:0:192::e0:225;
 set_real_ip_from 2620:7:6001::120;
 set_real_ip_from 2620:95:4007::111;
 set_real_ip_from 27.255.75.198;
+set_real_ip_from 2800:ba0:6:c1::4858;
 set_real_ip_from 2803:6d90:111::67;
 set_real_ip_from 2803:cd80:2000:10::db8f:5f60;
 set_real_ip_from 2a00:16b0:1:243::7012:3117;
@@ -1211,6 +1212,7 @@ set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
+set_real_ip_from 2a01:e5c0:7d13::2;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
@@ -1266,6 +1268,7 @@ set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1637,7 +1640,6 @@ set_real_ip_from 37.228.129.128;
 set_real_ip_from 37.228.129.189;
 set_real_ip_from 37.228.129.5;
 set_real_ip_from 37.228.129.63;
-set_real_ip_from 37.46.196.22;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.60.232.250;
 set_real_ip_from 37.60.234.89;
@@ -1768,6 +1770,7 @@ set_real_ip_from 51.81.222.62;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
@@ -1804,6 +1807,7 @@ set_real_ip_from 5.8.18.30;
 set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.171.137.169;
 set_real_ip_from 62.182.84.146;
+set_real_ip_from 62.60.250.5;
 set_real_ip_from 62.72.47.105;
 set_real_ip_from 64.190.113.221;
 set_real_ip_from 64.190.76.2;
