Update lists at 20250827-0601

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -158,7 +158,6 @@ allow 152.32.206.127;
 allow 152.53.106.19;
 allow 152.53.184.161;
 allow 152.53.53.243;
-allow 154.16.116.61;
 allow 154.26.159.157;
 allow 154.41.95.1;
 allow 154.41.95.2;
@@ -950,12 +949,12 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
+allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
-allow 23.191.200.3;
+allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
-allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
@@ -1205,6 +1204,7 @@ allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
 allow 2a01:270:9847::1;
+allow 2a01:4f8:10a:2d23::2;
 allow 2a01:4f8:c0c:564::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
@@ -1637,6 +1637,7 @@ allow 37.114.63.5;
 allow 37.187.5.192;
 allow 37.221.208.71;
 allow 37.228.129.128;
+allow 37.228.129.168;
 allow 37.228.129.189;
 allow 37.228.129.5;
 allow 37.228.129.63;
@@ -1832,6 +1833,7 @@ allow 77.48.28.237;
 allow 77.48.28.239;
 allow 77.81.247.72;
 allow 78.142.18.219;
+allow 79.124.8.110;
 allow 80.125.71.115;
 allow 80.241.60.207;
 allow 80.253.251.56;
@@ -1852,6 +1854,7 @@ allow 82.221.131.5;
 allow 82.221.131.86;
 allow 82.221.139.190;
 allow 82.29.128.145;
+allow 82.42.148.195;
 allow 83.147.17.190;
 allow 83.217.9.73;
 allow 83.228.94.69;
@@ -1877,6 +1880,7 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
+allow 88.99.148.243;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
