--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -350,6 +350,7 @@ deny 2a00:74a0:e000:1003::114;
 deny 2a00:99a0:0:1000::2;
 deny 2a00:c70:1:185:246:84:179:1;
 deny 2a01:270:9847::1;
+deny 2a01:4f8:10a:2d23::2;
 deny 2a01:4f8:c0c:564::1;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
