Update lists at 20250827-0901

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -97,7 +97,6 @@ allow 107.189.8.181;
 allow 107.189.8.226;
 allow 107.189.8.56;
 allow 107.189.8.70;
-allow 108.249.105.95;
 allow 108.61.189.136;
 allow 109.104.153.22;
 allow 109.169.33.163;
@@ -158,6 +157,7 @@ allow 152.32.206.127;
 allow 152.53.106.19;
 allow 152.53.184.161;
 allow 152.53.53.243;
+allow 154.16.116.61;
 allow 154.26.159.157;
 allow 154.41.95.1;
 allow 154.41.95.2;
@@ -471,6 +471,7 @@ allow 185.231.102.51;
 allow 185.233.100.23;
 allow 185.235.146.29;
 allow 185.241.208.115;
+allow 185.241.208.185;
 allow 185.241.208.202;
 allow 185.241.208.204;
 allow 185.241.208.206;
@@ -494,7 +495,6 @@ allow 185.247.184.33;
 allow 185.247.226.95;
 allow 185.252.232.218;
 allow 185.254.196.141;
-allow 185.28.47.22;
 allow 185.34.33.2;
 allow 185.35.202.222;
 allow 185.40.4.100;
@@ -949,12 +949,13 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
+allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
+allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
@@ -980,7 +981,6 @@ allow 2.58.56.220;
 allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2.58.56.93;
-allow 2600:1700:3a61:6f0:ea9c:25ff:fe8b:7a20;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
@@ -1216,7 +1216,6 @@ allow 2a01:e5c0:7d13::2;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
-allow 2a02:4840:1:4::15;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
@@ -1478,6 +1477,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
 allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
+allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:6a41:c13:1337::107;
 allow 2a0c:9a40:8860:51::aa11;
 allow 2a0c:9f00:2:12fa::1;
@@ -1571,6 +1571,7 @@ allow 2a12:a800:1:1:2:58:56:43;
 allow 2a12:a800:1:1:2:58:56:93;
 allow 2a12:a800:1:1:45:154:98:33;
 allow 2a12:a800:2:1:185:241:208:115;
+allow 2a12:a800:2:1:185:241:208:185;
 allow 2a12:a800:2:1:185:241:208:202;
 allow 2a12:a800:2:1:185:241:208:204;
 allow 2a12:a800:2:1:185:241:208:206;
@@ -1796,7 +1797,6 @@ allow 5.2.72.110;
 allow 5.2.79.190;
 allow 54.36.101.21;
 allow 54.36.108.162;
-allow 54.36.187.187;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
@@ -1862,8 +1862,9 @@ allow 83.96.213.63;
 allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
-allow 84.211.226.13;
+allow 84.211.224.201;
 allow 84.239.46.144;
+allow 85.239.41.130;
 allow 85.93.218.204;
 allow 85.93.31.31;
 allow 86.54.28.49;
@@ -1940,7 +1941,6 @@ allow 94.74.164.89;
 allow 95.128.43.164;
 allow 95.143.193.125;
 allow 95.168.173.143;
-allow 95.211.174.137;
 allow 95.211.244.28;
 allow 96.8.119.172;
 allow 98.128.173.33;
