--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -214,6 +214,7 @@ deny 172.81.132.94;
 deny 173.0.3.111;
 deny 173.237.206.68;
 deny 173.255.198.243;
+deny 176.114.248.225;
 deny 176.118.193.33;
 deny 176.121.81.51;
 deny 176.58.100.98;
@@ -950,13 +951,11 @@ deny 23.191.200.23;
 deny 23.191.200.24;
 deny 23.191.200.25;
 deny 23.191.200.26;
-deny 23.191.200.27;
+deny 23.191.200.28;
 deny 23.191.200.29;
 deny 23.191.200.3;
-deny 23.191.200.30;
 deny 23.191.200.31;
 deny 23.191.200.4;
-deny 23.191.200.5;
 deny 23.191.200.6;
 deny 23.191.200.7;
 deny 23.191.200.8;
@@ -1205,7 +1204,6 @@ deny 2a00:74a0:e000:1003::114;
 deny 2a00:99a0:0:1000::2;
 deny 2a00:c70:1:185:246:84:179:1;
 deny 2a01:270:9847::1;
-deny 2a01:4f8:10a:2d23::2;
 deny 2a01:4f8:c0c:564::1;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
@@ -1304,6 +1302,7 @@ deny 2a06:d380:0:103::62;
 deny 2a06:d380:0:103::63;
 deny 2a06:e80:3000:1:bad:babe:ca11:911;
 deny 2a07:6d80:1e01:3a13::;
+deny 2a07:b242:1000:1300:f250:8f0a:cdba:4d76;
 deny 2a07:e03:2a::bcde;
 deny 2a07:e042:1:181::1;
 deny 2a07:e042:1:182::1;
@@ -1497,7 +1496,6 @@ deny 2a0d:bbc7::f816:3eff:fee6:ca14;
 deny 2a0d:bbc7::f816:3eff:fee9:3e45;
 deny 2a0d:bbc7::f816:3eff:feec:9f18;
 deny 2a0d:bbc7::f816:3eff:fef2:6521;
-deny 2a0d:c2c0:1:4::2;
 deny 2a0e:1d80:13:b6d5::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
 deny 2a0e:4005:1002:ffff:185:40:4:101;
@@ -1887,7 +1885,6 @@ deny 88.80.20.86;
 deny 88.80.26.2;
 deny 88.80.26.3;
 deny 88.80.26.4;
-deny 88.99.148.243;
 deny 89.147.108.90;
 deny 89.147.110.118;
 deny 89.147.110.154;
@@ -1915,7 +1912,6 @@ deny 91.227.114.153;
 deny 91.92.109.126;
 deny 91.92.109.43;
 deny 92.243.24.163;
-deny 92.246.84.133;
 deny 93.113.25.161;
 deny 93.113.25.239;
 deny 93.123.109.116;
