Update lists at 20250828-0301

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -59,7 +59,6 @@ deny 104.244.79.50;
 deny 104.244.79.61;
 deny 104.254.90.195;
 deny 104.36.80.7;
-deny 107.173.38.18;
 deny 107.174.146.25;
 deny 107.175.93.157;
 deny 107.189.10.175;
@@ -951,12 +950,11 @@ deny 23.191.200.23;
 deny 23.191.200.24;
 deny 23.191.200.25;
 deny 23.191.200.26;
+deny 23.191.200.27;
 deny 23.191.200.28;
 deny 23.191.200.29;
-deny 23.191.200.3;
 deny 23.191.200.31;
 deny 23.191.200.4;
-deny 23.191.200.6;
 deny 23.191.200.7;
 deny 23.191.200.8;
 deny 23.191.200.9;
@@ -1265,6 +1263,7 @@ deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1496,6 +1495,7 @@ deny 2a0d:bbc7::f816:3eff:fee6:ca14;
 deny 2a0d:bbc7::f816:3eff:fee9:3e45;
 deny 2a0d:bbc7::f816:3eff:feec:9f18;
 deny 2a0d:bbc7::f816:3eff:fef2:6521;
+deny 2a0d:c2c0:1:4::2;
 deny 2a0e:1d80:13:b6d5::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
 deny 2a0e:4005:1002:ffff:185:40:4:101;
@@ -1777,6 +1777,7 @@ deny 51.91.18.151;
 deny 5.196.95.34;
 deny 52.233.83.66;
 deny 5.253.247.27;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
@@ -1838,7 +1839,6 @@ deny 77.48.28.237;
 deny 77.48.28.239;
 deny 77.81.247.72;
 deny 78.142.18.219;
-deny 79.124.8.110;
 deny 80.125.71.115;
 deny 80.241.60.207;
 deny 80.253.251.56;
@@ -1871,6 +1871,7 @@ deny 84.239.46.144;
 deny 85.239.41.130;
 deny 85.93.218.204;
 deny 85.93.31.31;
+deny 86.11.246.178;
 deny 86.54.28.49;
 deny 87.118.110.27;
 deny 87.118.116.103;
@@ -1912,6 +1913,7 @@ deny 91.227.114.153;
 deny 91.92.109.126;
 deny 91.92.109.43;
 deny 92.243.24.163;
+deny 92.246.84.133;
 deny 93.113.25.161;
 deny 93.113.25.239;
 deny 93.123.109.116;
