--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -59,7 +59,6 @@ allow 104.244.79.50;
 allow 104.244.79.61;
 allow 104.254.90.195;
 allow 104.36.80.7;
-allow 107.173.38.18;
 allow 107.174.146.25;
 allow 107.175.93.157;
 allow 107.189.10.175;
@@ -951,12 +950,11 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
+allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
-allow 23.191.200.3;
 allow 23.191.200.31;
 allow 23.191.200.4;
-allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -1265,6 +1263,7 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1496,6 +1495,7 @@ allow 2a0d:bbc7::f816:3eff:fee6:ca14;
 allow 2a0d:bbc7::f816:3eff:fee9:3e45;
 allow 2a0d:bbc7::f816:3eff:feec:9f18;
 allow 2a0d:bbc7::f816:3eff:fef2:6521;
+allow 2a0d:c2c0:1:4::2;
 allow 2a0e:1d80:13:b6d5::1;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
 allow 2a0e:4005:1002:ffff:185:40:4:101;
@@ -1777,6 +1777,7 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 52.233.83.66;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1838,7 +1839,6 @@ allow 77.48.28.237;
 allow 77.48.28.239;
 allow 77.81.247.72;
 allow 78.142.18.219;
-allow 79.124.8.110;
 allow 80.125.71.115;
 allow 80.241.60.207;
 allow 80.253.251.56;
@@ -1871,6 +1871,7 @@ allow 84.239.46.144;
 allow 85.239.41.130;
 allow 85.93.218.204;
 allow 85.93.31.31;
+allow 86.11.246.178;
 allow 86.54.28.49;
 allow 87.118.110.27;
 allow 87.118.116.103;
@@ -1912,6 +1913,7 @@ allow 91.227.114.153;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.243.24.163;
+allow 92.246.84.133;
 allow 93.113.25.161;
 allow 93.113.25.239;
 allow 93.123.109.116;
