Update lists at 20250829-0001

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -214,7 +214,6 @@ allow 172.81.132.94;
 allow 173.0.3.111;
 allow 173.237.206.68;
 allow 173.255.198.243;
-allow 176.114.248.225;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.58.100.98;
@@ -679,6 +678,7 @@ allow 2001:41d0:601:1100::6524;
 allow 2001:41d0:601:1100::6f85;
 allow 2001:41d0:601:1100::71bb;
 allow 2001:41d0:700:10a2::;
+allow 2001:41d0:700:1148::1;
 allow 2001:41d0:701:1000::5196;
 allow 2001:41d0:701:1100::57d3;
 allow 2001:41d0:805:d300::2b19:1929;
@@ -950,12 +950,13 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.27;
+allow 23.191.200.28;
+allow 23.191.200.29;
+allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
-allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -1275,6 +1276,7 @@ allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
+allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1303,7 +1305,6 @@ allow 2a06:d380:0:103::62;
 allow 2a06:d380:0:103::63;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:6d80:1e01:3a13::;
-allow 2a07:b242:1000:1300:f250:8f0a:cdba:4d76;
 allow 2a07:e03:2a::bcde;
 allow 2a07:e042:1:181::1;
 allow 2a07:e042:1:182::1;
@@ -1803,6 +1804,7 @@ allow 5.2.72.110;
 allow 5.2.79.190;
 allow 54.36.101.21;
 allow 54.36.108.162;
+allow 54.36.111.72;
 allow 54.36.187.187;
 allow 5.45.102.93;
 allow 5.45.104.176;
@@ -1863,6 +1865,7 @@ allow 83.147.17.190;
 allow 83.217.9.73;
 allow 83.228.94.69;
 allow 83.96.213.63;
+allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.224.201;
@@ -1940,7 +1943,6 @@ allow 94.230.208.147;
 allow 94.230.208.148;
 allow 94.72.103.33;
 allow 94.72.104.135;
-allow 94.74.164.89;
 allow 95.128.43.164;
 allow 95.143.193.125;
 allow 95.211.244.28;
