--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -14,6 +14,7 @@ deny 2001:41d0:601:1100::6524;
 deny 2001:41d0:601:1100::6f85;
 deny 2001:41d0:601:1100::71bb;
 deny 2001:41d0:700:10a2::;
+deny 2001:41d0:700:1148::1;
 deny 2001:41d0:701:1000::5196;
 deny 2001:41d0:701:1100::57d3;
 deny 2001:41d0:805:d300::2b19:1929;
@@ -419,6 +420,7 @@ deny 2a04:52c0:123:c6c3::1;
 deny 2a04:52c0:126:3ab8::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
+deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
@@ -447,7 +449,6 @@ deny 2a06:d380:0:103::62;
 deny 2a06:d380:0:103::63;
 deny 2a06:e80:3000:1:bad:babe:ca11:911;
 deny 2a07:6d80:1e01:3a13::;
-deny 2a07:b242:1000:1300:f250:8f0a:cdba:4d76;
 deny 2a07:e03:2a::bcde;
 deny 2a07:e042:1:181::1;
 deny 2a07:e042:1:182::1;
