--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -214,7 +214,6 @@ set_real_ip_from 172.81.132.94;
 set_real_ip_from 173.0.3.111;
 set_real_ip_from 173.237.206.68;
 set_real_ip_from 173.255.198.243;
-set_real_ip_from 176.114.248.225;
 set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.58.100.98;
@@ -679,6 +678,7 @@ set_real_ip_from 2001:41d0:601:1100::6524;
 set_real_ip_from 2001:41d0:601:1100::6f85;
 set_real_ip_from 2001:41d0:601:1100::71bb;
 set_real_ip_from 2001:41d0:700:10a2::;
+set_real_ip_from 2001:41d0:700:1148::1;
 set_real_ip_from 2001:41d0:701:1000::5196;
 set_real_ip_from 2001:41d0:701:1100::57d3;
 set_real_ip_from 2001:41d0:805:d300::2b19:1929;
@@ -950,12 +950,13 @@ set_real_ip_from 23.191.200.23;
 set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
-set_real_ip_from 23.191.200.27;
+set_real_ip_from 23.191.200.28;
+set_real_ip_from 23.191.200.29;
+set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.4;
 set_real_ip_from 23.191.200.5;
-set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
 set_real_ip_from 23.191.200.9;
@@ -1275,6 +1276,7 @@ set_real_ip_from 2a04:52c0:123:c6c3::1;
 set_real_ip_from 2a04:52c0:126:3ab8::1;
 set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:130:896e::1;
+set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
@@ -1303,7 +1305,6 @@ set_real_ip_from 2a06:d380:0:103::62;
 set_real_ip_from 2a06:d380:0:103::63;
 set_real_ip_from 2a06:e80:3000:1:bad:babe:ca11:911;
 set_real_ip_from 2a07:6d80:1e01:3a13::;
-set_real_ip_from 2a07:b242:1000:1300:f250:8f0a:cdba:4d76;
 set_real_ip_from 2a07:e03:2a::bcde;
 set_real_ip_from 2a07:e042:1:181::1;
 set_real_ip_from 2a07:e042:1:182::1;
@@ -1803,6 +1804,7 @@ set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 54.36.101.21;
 set_real_ip_from 54.36.108.162;
+set_real_ip_from 54.36.111.72;
 set_real_ip_from 54.36.187.187;
 set_real_ip_from 5.45.102.93;
 set_real_ip_from 5.45.104.176;
@@ -1863,6 +1865,7 @@ set_real_ip_from 83.147.17.190;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.228.94.69;
 set_real_ip_from 83.96.213.63;
+set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.19.182.20;
 set_real_ip_from 84.211.224.201;
@@ -1940,7 +1943,6 @@ set_real_ip_from 94.230.208.147;
 set_real_ip_from 94.230.208.148;
 set_real_ip_from 94.72.103.33;
 set_real_ip_from 94.72.104.135;
-set_real_ip_from 94.74.164.89;
 set_real_ip_from 95.128.43.164;
 set_real_ip_from 95.143.193.125;
 set_real_ip_from 95.211.244.28;
