--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -458,6 +458,7 @@ deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
 deny 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 deny 2a0a:4cc0:c1:12a1:58f9:e7ff:fe0b:b0f1;
+deny 2a0b:8bc0:2:b6a8::1;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:11::1;
